fix timer gap and empty sprite style data

--- a/src/pages/grow/Timer/Timer.module.scss
+++ b/src/pages/grow/Timer/Timer.module.scss
@@ -46,7 +46,6 @@
     justify-content: flex-start;
     align-items: center;
     padding-left: 10px;
-    gap: 20px;
 
     .text {
       font-size: 32px;
